refactor: migrate all integration tests to use QueryService exclusively
- Refactored 9 Pure Association Navigation tests to use executeRelation()
- Refactored 5 custom model tests to use QueryService.execute()
- Refactored 2 SQLite function tests to use QueryService.execute()
- Added JoinNode tests to SQLGeneratorTest (IR unit tests)
- Restored cross-dialect compatibility test with IR node construction
- Fixed Pure source syntax with proper RelationalDatabaseConnection definitions
- Removed all manual executeQuery(sql) calls from DuckDBIntegrationTest
- Cleaned up unused imports and sqlGenerator field initializations

All 136 tests pass. Architecture now enforces QueryService-only execution.