@@ -1,10 +1,8 @@
 package org.finos.legend.engine.test;
 
-import org.finos.legend.engine.plan.*;
 import org.finos.legend.engine.store.*;
 import org.finos.legend.engine.transpiler.DuckDBDialect;
 import org.finos.legend.engine.transpiler.SQLDialect;
-import org.finos.legend.engine.transpiler.SQLGenerator;
 import org.finos.legend.pure.dsl.definition.*;
 import org.finos.legend.pure.m3.*;
 
@@ -47,7 +45,6 @@ class DuckDBIntegrationTest extends AbstractDatabaseTest {
     @BeforeEach
     void setUp() throws SQLException {
         connection = DriverManager.getConnection(getJdbcUrl());
-        sqlGenerator = new SQLGenerator(getDialect());
         setupDatabase();
         setupMappingRegistry();
     }
@@ -321,56 +318,6 @@ class DuckDBIntegrationTest extends AbstractDatabaseTest {
         assertEquals("T_ADDRESS", join.rightTable());
     }
 
-    @Test
-    @DisplayName("Generate SQL for JOIN query")
-    void testGenerateJoinSql() throws SQLException {
-        // GIVEN: T_ADDRESS table already exists and is populated from setupDatabase()
-        // (John has 2 addresses, Jane and Bob have 1 each = 4 total)
-
-        // WHEN: We generate a JOIN SQL
-        Table personTable = modelBuilder.getTable("T_PERSON");
-        Table addressTable = modelBuilder.getTable("T_ADDRESS");
-
-        TableNode personNode = new TableNode(personTable, "p");
-        TableNode addressNode = new TableNode(addressTable, "a");
-
-        // Build join condition: p.ID = a.PERSON_ID
-        Expression joinCondition = ComparisonExpression.equals(
-                ColumnReference.of("p", "ID"),
-                ColumnReference.of("a", "PERSON_ID"));
-
-        JoinNode joinNode = JoinNode.inner(personNode, addressNode, joinCondition);
-
-        // Project: firstName, street
-        ProjectNode projectNode = new ProjectNode(joinNode, List.of(
-                Projection.column("p", "FIRST_NAME", "firstName"),
-                Projection.column("a", "STREET", "street")));
-
-        String sql = sqlGenerator.generate(projectNode);
-        System.out.println("Generated JOIN SQL: " + sql);
-
-        // THEN: SQL is valid and returns results
-        assertTrue(sql.contains("INNER JOIN"), "Should have INNER JOIN");
-        assertTrue(sql.contains("ON"), "Should have ON clause");
-
-        // Execute and verify
-        try (Statement stmt = connection.createStatement();
-                ResultSet rs = stmt.executeQuery(sql)) {
-
-            int count = 0;
-            while (rs.next()) {
-                String firstName = rs.getString("firstName");
-                String street = rs.getString("street");
-                assertNotNull(firstName);
-                assertNotNull(street);
-                count++;
-            }
-
-            // John: 2, Jane: 1, Bob: 1 = 4 total
-            assertEquals(4, count, "Should find 4 person-address combinations");
-        }
-    }
-
     // ==================== Pure Association Navigation Tests ====================
     // These tests start with REAL Pure queries that navigate through associations.
     // The compiler automatically generates EXISTS for to-many navigation in
@@ -405,19 +352,16 @@ class DuckDBIntegrationTest extends AbstractDatabaseTest {
         assertTrue(sql.contains("SELECT 1"), "Should use SELECT 1 in EXISTS subquery");
         assertFalse(sql.contains("INNER JOIN"), "Should NOT use INNER JOIN for filtering");
 
-        // AND: The query executes correctly
-        try (Statement stmt = connection.createStatement();
-                ResultSet rs = stmt.executeQuery(sql)) {
-
-            java.util.Set<String> people = new java.util.HashSet<>();
-            while (rs.next()) {
-                people.add(rs.getString("firstName"));
-            }
-
-            // Only John has address '123 Main St'
-            assertEquals(1, people.size(), "Should find exactly 1 person");
-            assertTrue(people.contains("John"), "Should find John");
+        // AND: Execute via QueryService and verify results
+        var result = executeRelation(pureQuery);
+        java.util.Set<String> people = new java.util.HashSet<>();
+        for (var row : result.rows()) {
+            people.add((String) row.get(0));
         }
+
+        // Only John has address '123 Main St'
+        assertEquals(1, people.size(), "Should find exactly 1 person");
+        assertTrue(people.contains("John"), "Should find John");
     }
 
     @Test
@@ -441,27 +385,24 @@ class DuckDBIntegrationTest extends AbstractDatabaseTest {
         assertTrue(sql.contains("STREET"), "Should project STREET column");
         assertFalse(sql.contains("EXISTS"), "Should NOT use EXISTS for projection");
 
-        // AND: The query executes and returns person-address pairs
-        try (Statement stmt = connection.createStatement();
-                ResultSet rs = stmt.executeQuery(sql)) {
-
-            java.util.List<String> results = new java.util.ArrayList<>();
-            while (rs.next()) {
-                String firstName = rs.getString("firstName");
-                String street = rs.getString("street");
-                results.add(firstName + ": " + street);
-            }
-
-            System.out.println("Projection results:");
-            results.forEach(r -> System.out.println("  " + r));
-
-            // John has 2 addresses, Jane has 1, Bob has 1 = 4 rows total
-            assertEquals(4, results.size(), "Should have 4 person-address rows");
-
-            // Verify John appears twice (once per address)
-            long johnCount = results.stream().filter(r -> r.startsWith("John:")).count();
-            assertEquals(2, johnCount, "John should appear twice (has 2 addresses)");
+        // AND: Execute via QueryService and verify results
+        var result = executeRelation(pureQuery);
+        java.util.List<String> results = new java.util.ArrayList<>();
+        for (var row : result.rows()) {
+            String firstName = (String) row.get(0);
+            String street = (String) row.get(1);
+            results.add(firstName + ": " + street);
         }
+
+        System.out.println("Projection results:");
+        results.forEach(r -> System.out.println("  " + r));
+
+        // John has 2 addresses, Jane has 1, Bob has 1 = 4 rows total
+        assertEquals(4, results.size(), "Should have 4 person-address rows");
+
+        // Verify John appears twice (once per address)
+        long johnCount = results.stream().filter(r -> r.startsWith("John:")).count();
+        assertEquals(2, johnCount, "John should appear twice (has 2 addresses)");
     }
 
     @Test
@@ -487,23 +428,18 @@ class DuckDBIntegrationTest extends AbstractDatabaseTest {
         assertTrue(sql.contains("STREET"), "Should project STREET");
         assertTrue(sql.contains("CITY"), "Should project CITY");
 
-        // AND: Query executes correctly
-        try (Statement stmt = connection.createStatement();
-                ResultSet rs = stmt.executeQuery(sql)) {
-
-            int count = 0;
-            while (rs.next()) {
-                String firstName = rs.getString("firstName");
-                String street = rs.getString("street");
-                String city = rs.getString("city");
-                assertNotNull(firstName, "firstName should not be null");
-                // street and city can be null if no address exists
-                System.out.println("  " + firstName + ": " + street + ", " + city);
-                count++;
-            }
-
-            assertEquals(4, count, "Should have 4 rows");
+        // AND: Execute via QueryService and verify results
+        var result = executeRelation(pureQuery);
+        int count = 0;
+        for (var row : result.rows()) {
+            String firstName = (String) row.get(0);
+            String street = (String) row.get(1);
+            String city = (String) row.get(2);
+            assertNotNull(firstName, "firstName should not be null");
+            System.out.println("  " + firstName + ": " + street + ", " + city);
+            count++;
         }
+        assertEquals(4, count, "Should have 4 rows");
     }
 
     @Test
@@ -527,25 +463,19 @@ class DuckDBIntegrationTest extends AbstractDatabaseTest {
         assertTrue(sql.contains("CITY"), "Should project CITY from joined table");
         assertTrue(sql.contains("LEFT OUTER JOIN"), "Should use LEFT OUTER JOIN");
 
-        // AND: Query executes correctly
-        try (Statement stmt = connection.createStatement();
-                ResultSet rs = stmt.executeQuery(sql)) {
-
-            int count = 0;
-            while (rs.next()) {
-                String firstName = rs.getString("firstName");
-                String lastName = rs.getString("lastName");
-                int age = rs.getInt("age");
-                assertNotNull(firstName);
-                assertNotNull(lastName);
-                assertTrue(age > 0, "Age should be positive");
-                // city can be null for LEFT JOIN
-
-                count++;
-            }
-
-            assertEquals(4, count, "Should have 4 rows");
+        // AND: Execute via QueryService and verify results
+        var result = executeRelation(pureQuery);
+        int count = 0;
+        for (var row : result.rows()) {
+            String firstName = (String) row.get(0);
+            String lastName = (String) row.get(1);
+            int age = ((Number) row.get(2)).intValue();
+            assertNotNull(firstName);
+            assertNotNull(lastName);
+            assertTrue(age > 0, "Age should be positive");
+            count++;
         }
+        assertEquals(4, count, "Should have 4 rows");
     }
 
     @Test
@@ -582,27 +512,24 @@ class DuckDBIntegrationTest extends AbstractDatabaseTest {
         assertTrue(sql.contains("LEFT OUTER JOIN"), "Should use LEFT OUTER JOIN for projection");
         assertTrue(sql.contains("SELECT 1"), "EXISTS subquery should use SELECT 1");
 
-        // AND: Query executes correctly
-        try (Statement stmt = connection.createStatement();
-                ResultSet rs = stmt.executeQuery(sql)) {
-
-            java.util.List<String> results = new java.util.ArrayList<>();
-            while (rs.next()) {
-                String firstName = rs.getString("firstName");
-                String street = rs.getString("street");
-                String city = rs.getString("city");
-                results.add(firstName + ": " + street + ", " + city);
-                System.out.println("  " + firstName + ": " + street + ", " + city);
-            }
-
-            // John is the only one with a New York address
-            // But we should see BOTH of John's addresses (row multiplication from LEFT
-            // JOIN)
-            assertEquals(2, results.size(), "Should have 2 rows (both of John's addresses)");
-            assertTrue(results.stream().allMatch(r -> r.startsWith("John:")), "All results should be John");
-            assertTrue(results.stream().anyMatch(r -> r.contains("New York")), "Should include NY address");
-            assertTrue(results.stream().anyMatch(r -> r.contains("Boston")), "Should include Boston address");
+        // AND: Execute via QueryService and verify results
+        var result = executeRelation(pureQuery);
+        java.util.List<String> results = new java.util.ArrayList<>();
+        for (var row : result.rows()) {
+            String firstName = (String) row.get(0);
+            String street = (String) row.get(1);
+            String city = (String) row.get(2);
+            results.add(firstName + ": " + street + ", " + city);
+            System.out.println("  " + firstName + ": " + street + ", " + city);
         }
+
+        // John is the only one with a New York address
+        // But we should see BOTH of John's addresses (row multiplication from LEFT
+        // JOIN)
+        assertEquals(2, results.size(), "Should have 2 rows (both of John's addresses)");
+        assertTrue(results.stream().allMatch(r -> r.startsWith("John:")), "All results should be John");
+        assertTrue(results.stream().anyMatch(r -> r.contains("New York")), "Should include NY address");
+        assertTrue(results.stream().anyMatch(r -> r.contains("Boston")), "Should include Boston address");
     }
 
     @Test
@@ -623,22 +550,20 @@ class DuckDBIntegrationTest extends AbstractDatabaseTest {
         assertTrue(sql.contains("EXISTS"), "Should use EXISTS for filter");
         assertTrue(sql.contains("LEFT OUTER JOIN"), "Should use LEFT OUTER JOIN for projection");
 
-        try (Statement stmt = connection.createStatement();
-                ResultSet rs = stmt.executeQuery(sql)) {
-
-            java.util.List<String> results = new java.util.ArrayList<>();
-            while (rs.next()) {
-                String firstName = rs.getString("firstName");
-                String street = rs.getString("street");
-                results.add(firstName + ": " + street);
-                System.out.println("  " + firstName + ": " + street);
-            }
-
-            // Jane is the only one with a Chicago address, and she has only 1 address
-            assertEquals(1, results.size(), "Should have 1 row");
-            assertTrue(results.getFirst().startsWith("Jane:"), "Should be Jane");
-            assertTrue(results.getFirst().contains("789 Main Rd"), "Should show Jane's street");
+        // Execute via QueryService and verify results
+        var result = executeRelation(pureQuery);
+        java.util.List<String> results = new java.util.ArrayList<>();
+        for (var row : result.rows()) {
+            String firstName = (String) row.get(0);
+            String street = (String) row.get(1);
+            results.add(firstName + ": " + street);
+            System.out.println("  " + firstName + ": " + street);
         }
+
+        // Jane is the only one with a Chicago address, and she has only 1 address
+        assertEquals(1, results.size(), "Should have 1 row");
+        assertTrue(results.getFirst().startsWith("Jane:"), "Should be Jane");
+        assertTrue(results.getFirst().contains("789 Main Rd"), "Should show Jane's street");
     }
 
     @Test
@@ -662,25 +587,23 @@ class DuckDBIntegrationTest extends AbstractDatabaseTest {
         assertTrue(sql.contains("LEFT OUTER JOIN"), "Should use LEFT OUTER JOIN for projection");
         assertTrue(sql.contains("LAST_NAME") && sql.contains("'Smith'"), "Should filter by LAST_NAME");
 
-        try (Statement stmt = connection.createStatement();
-                ResultSet rs = stmt.executeQuery(sql)) {
-
-            java.util.List<String> results = new java.util.ArrayList<>();
-            java.util.Set<String> people = new java.util.HashSet<>();
-            while (rs.next()) {
-                String firstName = rs.getString("firstName");
-                String street = rs.getString("street");
-                results.add(firstName + ": " + street);
-                people.add(firstName);
-                System.out.println("  " + firstName + ": " + street);
-            }
-
-            // John Smith has 2 addresses, Jane Smith has 1 = 3 total rows
-            assertEquals(3, results.size(), "Should have 3 rows (John x2, Jane x1)");
-            assertEquals(2, people.size(), "Should have 2 unique people");
-            assertTrue(people.contains("John"), "Should include John");
-            assertTrue(people.contains("Jane"), "Should include Jane");
+        // Execute via QueryService and verify results
+        var result = executeRelation(pureQuery);
+        java.util.List<String> results = new java.util.ArrayList<>();
+        java.util.Set<String> people = new java.util.HashSet<>();
+        for (var row : result.rows()) {
+            String firstName = (String) row.get(0);
+            String street = (String) row.get(1);
+            results.add(firstName + ": " + street);
+            people.add(firstName);
+            System.out.println("  " + firstName + ": " + street);
         }
+
+        // John Smith has 2 addresses, Jane Smith has 1 = 3 total rows
+        assertEquals(3, results.size(), "Should have 3 rows (John x2, Jane x1)");
+        assertEquals(2, people.size(), "Should have 2 unique people");
+        assertTrue(people.contains("John"), "Should include John");
+        assertTrue(people.contains("Jane"), "Should include Jane");
     }
 
     @Test
@@ -711,22 +634,20 @@ class DuckDBIntegrationTest extends AbstractDatabaseTest {
         System.out.println("Pure Query: " + pureQuery);
         System.out.println("Generated SQL: " + sql);
 
-        try (Statement stmt = connection.createStatement();
-                ResultSet rs = stmt.executeQuery(sql)) {
-
-            int johnCount = 0;
-            int totalCount = 0;
-            while (rs.next()) {
-                totalCount++;
-                if ("John".equals(rs.getString("firstName"))) {
-                    johnCount++;
-                }
+        // Execute via QueryService and verify results
+        var result = executeRelation(pureQuery);
+        int johnCount = 0;
+        int totalCount = 0;
+        for (var row : result.rows()) {
+            totalCount++;
+            if ("John".equals(row.get(0))) {
+                johnCount++;
             }
-
-            // THEN: John appears exactly ONCE (not multiple times)
-            assertEquals(1, johnCount, "John should appear exactly once");
-            assertEquals(1, totalCount, "Only one person lives in New York");
         }
+
+        // THEN: John appears exactly ONCE (not multiple times)
+        assertEquals(1, johnCount, "John should appear exactly once");
+        assertEquals(1, totalCount, "Only one person lives in New York");
     }
 
     @Test
@@ -752,17 +673,14 @@ class DuckDBIntegrationTest extends AbstractDatabaseTest {
         String sql = generateSql(pureQuery);
         System.out.println("Generated SQL: " + sql);
 
-        try (Statement stmt = connection.createStatement();
-                ResultSet rs = stmt.executeQuery(sql)) {
-
-            int count = 0;
-            while (rs.next()) {
-                assertEquals("John", rs.getString("firstName"));
-                count++;
-            }
-
-            assertEquals(1, count, "John should appear exactly once despite multiple matching addresses");
+        // Execute via QueryService and verify results
+        var result = executeRelation(pureQuery);
+        int count = 0;
+        for (var row : result.rows()) {
+            assertEquals("John", row.get(0));
+            count++;
         }
+        assertEquals(1, count, "John should appear exactly once despite multiple matching addresses");
 
         // Cleanup
         try (Statement stmt = connection.createStatement()) {
@@ -859,179 +777,6 @@ class DuckDBIntegrationTest extends AbstractDatabaseTest {
         }
     }
 
-    // ==================== JOINs for DataFrame/Relational Queries
-    // ====================
-
-    @Test
-    @DisplayName("JOIN is still correct for DataFrame queries (columns from both sides)")
-    void testJoinForRelationalDataFrame() throws SQLException {
-        // JOINs are still correct and useful for "Relational" or "DataFrame"
-        // style queries where you explicitly SELECT columns from BOTH sides.
-        // The row multiplication is INTENTIONAL in this case.
-
-        Table personTable = modelBuilder.getTable("T_PERSON");
-        Table addressTable = modelBuilder.getTable("T_ADDRESS");
-
-        TableNode personNode = new TableNode(personTable, "p");
-        TableNode addressNode = new TableNode(addressTable, "a");
-
-        Expression joinCondition = ComparisonExpression.equals(
-                ColumnReference.of("p", "ID"),
-                ColumnReference.of("a", "PERSON_ID"));
-
-        JoinNode joinNode = JoinNode.inner(personNode, addressNode, joinCondition);
-
-        // Project columns from BOTH tables (DataFrame style)
-        ProjectNode projectNode = new ProjectNode(joinNode, List.of(
-                Projection.column("p", "FIRST_NAME", "personName"),
-                Projection.column("a", "STREET", "street"),
-                Projection.column("a", "CITY", "city")));
-
-        String sql = sqlGenerator.generate(projectNode);
-        System.out.println("DataFrame JOIN SQL: " + sql);
-
-        try (Statement stmt = connection.createStatement();
-                ResultSet rs = stmt.executeQuery(sql)) {
-
-            int count = 0;
-            java.util.List<String> rows = new java.util.ArrayList<>();
-            while (rs.next()) {
-                String row = rs.getString("personName") + " - " +
-                        rs.getString("street") + ", " +
-                        rs.getString("city");
-                rows.add(row);
-                count++;
-            }
-
-            // We get 4 rows (one per person-address combination)
-            // John: 2 addresses, Jane: 1 address, Bob: 1 address
-            assertEquals(4, count, "Should have 4 person-address combinations");
-            System.out.println("DataFrame results:");
-            rows.forEach(r -> System.out.println("  " + r));
-        }
-    }
-
-    // ==================== GROUP BY / Aggregation Tests ====================
-
-    @Test
-    @DisplayName("GroupByNode generates and executes correct SQL in DuckDB")
-    void testGroupByNodeExecution() throws Exception {
-        // GIVEN: A table with data for aggregation
-        try (Statement stmt = connection.createStatement()) {
-            stmt.execute("CREATE TABLE T_EMPLOYEE (ID INTEGER, NAME VARCHAR, DEPARTMENT VARCHAR, SALARY INTEGER)");
-            stmt.execute("INSERT INTO T_EMPLOYEE VALUES (1, 'John', 'Engineering', 80000)");
-            stmt.execute("INSERT INTO T_EMPLOYEE VALUES (2, 'Jane', 'Engineering', 90000)");
-            stmt.execute("INSERT INTO T_EMPLOYEE VALUES (3, 'Bob', 'Sales', 60000)");
-            stmt.execute("INSERT INTO T_EMPLOYEE VALUES (4, 'Alice', 'Sales', 70000)");
-            stmt.execute("INSERT INTO T_EMPLOYEE VALUES (5, 'Charlie', 'Engineering', 85000)");
-        }
-
-        // Build the GroupByNode directly
-        Table employeeTable = new Table("T_EMPLOYEE", java.util.List.of(
-                Column.required("ID", SqlDataType.INTEGER),
-                Column.required("NAME", SqlDataType.VARCHAR),
-                Column.required("DEPARTMENT", SqlDataType.VARCHAR),
-                Column.required("SALARY", SqlDataType.INTEGER)));
-
-        TableNode tableNode = new TableNode(employeeTable, "t0");
-
-        GroupByNode groupByNode = new GroupByNode(
-                tableNode,
-                java.util.List.of("DEPARTMENT"),
-                java.util.List.of(
-                        new GroupByNode.AggregateProjection("totalSalary", "SALARY",
-                                AggregateExpression.AggregateFunction.SUM),
-                        new GroupByNode.AggregateProjection("avgSalary", "SALARY",
-                                AggregateExpression.AggregateFunction.AVG),
-                        new GroupByNode.AggregateProjection("headcount", "ID",
-                                AggregateExpression.AggregateFunction.COUNT)));
-
-        // WHEN: We generate and execute SQL
-        String sql = sqlGenerator.generate(groupByNode);
-        System.out.println("GroupBy Integration SQL: " + sql);
-
-        // THEN: Results are correct
-        try (Statement stmt = connection.createStatement();
-                ResultSet rs = stmt.executeQuery(sql)) {
-
-            java.util.Map<String, int[]> results = new java.util.HashMap<>();
-            while (rs.next()) {
-                String dept = rs.getString("DEPARTMENT");
-                int total = rs.getInt("totalSalary");
-                int avg = rs.getInt("avgSalary");
-                int count = rs.getInt("headcount");
-                results.put(dept, new int[] { total, avg, count });
-                System.out.println("  " + dept + ": total=" + total + ", avg=" + avg + ", count=" + count);
-            }
-
-            // Engineering: 80000 + 90000 + 85000 = 255000, avg=85000, count=3
-            assertEquals(255000, results.get("Engineering")[0], "Engineering total salary");
-            assertEquals(85000, results.get("Engineering")[1], "Engineering avg salary");
-            assertEquals(3, results.get("Engineering")[2], "Engineering headcount");
-
-            // Sales: 60000 + 70000 = 130000, avg=65000, count=2
-            assertEquals(130000, results.get("Sales")[0], "Sales total salary");
-            assertEquals(65000, results.get("Sales")[1], "Sales avg salary");
-            assertEquals(2, results.get("Sales")[2], "Sales headcount");
-        }
-    }
-
-    @Test
-    @DisplayName("GroupByNode with FilterNode executes correctly")
-    void testGroupByWithFilterExecution() throws Exception {
-        // GIVEN: Reuse the T_EMPLOYEE table from above test
-        try (Statement stmt = connection.createStatement()) {
-            // Drop if exists from previous test
-            stmt.execute("DROP TABLE IF EXISTS T_EMPLOYEE");
-            stmt.execute("CREATE TABLE T_EMPLOYEE (ID INTEGER, NAME VARCHAR, DEPARTMENT VARCHAR, SALARY INTEGER)");
-            stmt.execute("INSERT INTO T_EMPLOYEE VALUES (1, 'John', 'Engineering', 80000)");
-            stmt.execute("INSERT INTO T_EMPLOYEE VALUES (2, 'Jane', 'Engineering', 90000)");
-            stmt.execute("INSERT INTO T_EMPLOYEE VALUES (3, 'Bob', 'Sales', 40000)");
-            stmt.execute("INSERT INTO T_EMPLOYEE VALUES (4, 'Alice', 'Sales', 70000)");
-        }
-
-        Table employeeTable = new Table("T_EMPLOYEE", java.util.List.of(
-                Column.required("DEPARTMENT", SqlDataType.VARCHAR),
-                Column.required("SALARY", SqlDataType.INTEGER)));
-
-        TableNode tableNode = new TableNode(employeeTable, "t0");
-
-        // Filter: SALARY > 50000
-        FilterNode filterNode = new FilterNode(tableNode,
-                ComparisonExpression.greaterThan(
-                        ColumnReference.of("t0", "SALARY"),
-                        Literal.integer(50000)));
-
-        GroupByNode groupByNode = new GroupByNode(
-                filterNode,
-                java.util.List.of("DEPARTMENT"),
-                java.util.List.of(
-                        new GroupByNode.AggregateProjection("totalSalary", "SALARY",
-                                AggregateExpression.AggregateFunction.SUM)));
-
-        // WHEN: We execute
-        String sql = sqlGenerator.generate(groupByNode);
-        System.out.println("Filter+GroupBy SQL: " + sql);
-
-        try (Statement stmt = connection.createStatement();
-                ResultSet rs = stmt.executeQuery(sql)) {
-
-            java.util.Map<String, Integer> results = new java.util.HashMap<>();
-            while (rs.next()) {
-                results.put(rs.getString("DEPARTMENT"), rs.getInt("totalSalary"));
-            }
-
-            // Only salaries > 50000 are included
-            // Engineering: 80000 + 90000 = 170000
-            // Sales: only 70000 (40000 is filtered out)
-            assertEquals(170000, results.get("Engineering"), "Engineering total (>50k)");
-            assertEquals(70000, results.get("Sales"), "Sales total (>50k)");
-        }
-    }
-
-    // ==================== Pure Syntax End-to-End GroupBy Tests
-    // ====================
-
     @Test
     @DisplayName("Pure syntax: Class.all()->project()->groupBy()")
     void testPureSyntaxProjectThenGroupBy() throws Exception {
@@ -1045,38 +790,39 @@ class DuckDBIntegrationTest extends AbstractDatabaseTest {
             stmt.execute("INSERT INTO T_EMP VALUES (4, 'Sales', 70000)");
         }
 
-        // Build model from Pure source
-        String model = """
+        // Build model with connection and runtime
+        String pureSource = """
                 Class model::Emp { dept: String[1]; sal: Integer[1]; }
                 Database store::EmpDb ( Table T_EMP ( ID INTEGER, DEPT VARCHAR(100), SAL INTEGER ) )
                 Mapping model::EmpMap ( Emp: Relational { ~mainTable [EmpDb] T_EMP dept: [EmpDb] T_EMP.DEPT, sal: [EmpDb] T_EMP.SAL } )
+
+                RelationalDatabaseConnection store::TestConnection
+                {
+                    type: DuckDB;
+                    specification: InMemory { };
+                    auth: NoAuth { };
+                }
+
+                Runtime test::TestRuntime
+                {
+                    mappings: [ model::EmpMap ];
+                    connections: [ store::EmpDb: store::TestConnection ];
+                }
                 """;
 
-        modelBuilder = new PureModelBuilder();
-        modelBuilder.addSource(model);
-        MappingRegistry mappingRegistry = modelBuilder.getMappingRegistry();
-        pureCompiler = new org.finos.legend.pure.dsl.PureCompiler(mappingRegistry);
-
-        // Correct Relation v2 pattern: Class.all() -> project() converts Class to
-        // Relation, THEN groupBy
-        // project() extracts the columns we want to aggregate, creating a Relation
+        // Pure query
         String pureQuery = "Emp.all()->project([{e | $e.dept}, {e | $e.sal}], ['dept', 'sal'])->groupBy([{r | $r.dept}], [{r | $r.sal}], ['totalSal'])";
-        RelationNode plan = pureCompiler.compile(pureQuery);
-        String sql = sqlGenerator.generate(plan);
 
-        System.out.println("Pure Project+GroupBy SQL: " + sql);
+        // Execute via QueryService
+        var result = queryService.execute(pureSource, pureQuery, "test::TestRuntime", connection);
 
-        try (Statement stmt = connection.createStatement();
-                ResultSet rs = stmt.executeQuery(sql)) {
-
-            java.util.Map<String, Integer> results = new java.util.HashMap<>();
-            while (rs.next()) {
-                results.put(rs.getString("dept"), rs.getInt("totalSal"));
-            }
-
-            assertEquals(170000, results.get("Engineering"), "Engineering total");
-            assertEquals(130000, results.get("Sales"), "Sales total");
+        java.util.Map<String, Integer> results = new java.util.HashMap<>();
+        for (var row : result.rows()) {
+            results.put((String) row.get(0), ((Number) row.get(1)).intValue());
         }
+
+        assertEquals(170000, results.get("Engineering"), "Engineering total");
+        assertEquals(130000, results.get("Sales"), "Sales total");
     }
 
     @Test
@@ -1110,57 +856,79 @@ class DuckDBIntegrationTest extends AbstractDatabaseTest {
     @Test
     @DisplayName("Pure syntax: Class.all()->sortBy({...})->limit()")
     void testPureSyntaxSortByAndLimit() throws Exception {
-        // GIVEN: A model with employees
-        String model = """
+        // GIVEN: A model with connection and runtime
+        String pureSource = """
                 Class model::Emp { name: String[1]; sal: Integer[1]; }
                 Database store::EmpDb ( Table T_EMP ( ID INTEGER, NAME VARCHAR(100), SAL INTEGER ) )
                 Mapping model::EmpMap ( Emp: Relational { ~mainTable [EmpDb] T_EMP name: [EmpDb] T_EMP.NAME, sal: [EmpDb] T_EMP.SAL } )
+
+                RelationalDatabaseConnection store::TestConnection
+                {
+                    type: DuckDB;
+                    specification: InMemory { };
+                    auth: NoAuth { };
+                }
+
+                Runtime test::TestRuntime
+                {
+                    mappings: [ model::EmpMap ];
+                    connections: [ store::EmpDb: store::TestConnection ];
+                }
                 """;
 
-        modelBuilder = new PureModelBuilder();
-        modelBuilder.addSource(model);
-        MappingRegistry mappingRegistry = modelBuilder.getMappingRegistry();
-        pureCompiler = new org.finos.legend.pure.dsl.PureCompiler(mappingRegistry);
+        // Create test data
+        try (Statement stmt = connection.createStatement()) {
+            stmt.execute("DROP TABLE IF EXISTS T_EMP");
+            stmt.execute("CREATE TABLE T_EMP (ID INTEGER, NAME VARCHAR(100), SAL INTEGER)");
+            stmt.execute(
+                    "INSERT INTO T_EMP VALUES (1, 'John', 50000), (2, 'Jane', 80000), (3, 'Bob', 60000), (4, 'Alice', 70000)");
+        }
 
-        // WHEN: Parse and compile Pure query with sortBy and limit
+        // Execute via QueryService
         String pureQuery = "Emp.all()->sortBy({e | $e.sal}, 'desc')->limit(3)";
-        RelationNode plan = pureCompiler.compile(pureQuery);
-        String sql = sqlGenerator.generate(plan);
+        var result = queryService.execute(pureSource, pureQuery, "test::TestRuntime", connection);
 
-        System.out.println("Pure sortBy+limit SQL: " + sql);
-
-        // THEN: Should generate correct SQL with ORDER BY and LIMIT
-        assertTrue(sql.contains("ORDER BY"), "Should contain ORDER BY");
-        assertTrue(sql.contains("LIMIT"), "Should contain LIMIT");
-        assertTrue(sql.contains("DESC"), "Should contain DESC");
+        // Should get top 3 salaries in descending order
+        assertEquals(3, result.rows().size(), "Should return 3 rows");
     }
 
     @Test
     @DisplayName("Pure syntax: Relation->sort()->slice()")
     void testPureSyntaxRelationSortAndSlice() throws Exception {
-        // GIVEN: A model
-        String model = """
+        // GIVEN: A model with connection and runtime
+        String pureSource = """
                 Class model::Emp { name: String[1]; sal: Integer[1]; }
                 Database store::EmpDb ( Table T_EMP ( ID INTEGER, NAME VARCHAR(100), SAL INTEGER ) )
                 Mapping model::EmpMap ( Emp: Relational { ~mainTable [EmpDb] T_EMP name: [EmpDb] T_EMP.NAME, sal: [EmpDb] T_EMP.SAL } )
+
+                RelationalDatabaseConnection store::TestConnection
+                {
+                    type: DuckDB;
+                    specification: InMemory { };
+                    auth: NoAuth { };
+                }
+
+                Runtime test::TestRuntime
+                {
+                    mappings: [ model::EmpMap ];
+                    connections: [ store::EmpDb: store::TestConnection ];
+                }
                 """;
 
-        modelBuilder = new PureModelBuilder();
-        modelBuilder.addSource(model);
-        MappingRegistry mappingRegistry = modelBuilder.getMappingRegistry();
-        pureCompiler = new org.finos.legend.pure.dsl.PureCompiler(mappingRegistry);
+        // Create test data
+        try (Statement stmt = connection.createStatement()) {
+            stmt.execute("DROP TABLE IF EXISTS T_EMP");
+            stmt.execute("CREATE TABLE T_EMP (ID INTEGER, NAME VARCHAR(100), SAL INTEGER)");
+            stmt.execute(
+                    "INSERT INTO T_EMP VALUES (1, 'John', 50000), (2, 'Jane', 80000), (3, 'Bob', 60000), (4, 'Alice', 70000), (5, 'Eve', 55000), (6, 'Charlie', 65000)");
+        }
 
-        // WHEN: Parse and compile with project()->sort()->slice()
+        // Execute via QueryService
         String pureQuery = "Emp.all()->project([{e | $e.name}, {e | $e.sal}], ['name', 'sal'])->sort('sal', 'asc')->slice(0, 5)";
-        RelationNode plan = pureCompiler.compile(pureQuery);
-        String sql = sqlGenerator.generate(plan);
+        var result = queryService.execute(pureSource, pureQuery, "test::TestRuntime", connection);
 
-        System.out.println("Pure Relation sort+slice SQL: " + sql);
-
-        // THEN: Should generate correct SQL
-        assertTrue(sql.contains("ORDER BY"), "Should contain ORDER BY");
-        assertTrue(sql.contains("ASC"), "Should contain ASC");
-        assertTrue(sql.contains("LIMIT"), "Should contain LIMIT");
+        // Should get first 5 of 6 rows, sorted by salary ascending
+        assertEquals(5, result.rows().size(), "Should return 5 rows");
     }
 
     // ==================== Function Definition Tests ====================
@@ -1168,8 +936,8 @@ class DuckDBIntegrationTest extends AbstractDatabaseTest {
     @Test
     @DisplayName("Function with Class query - execute body against DuckDB")
     void testFunctionWithClassQuery_DuckDB() throws Exception {
-        // GIVEN: A model with a function that returns a filtered Class query
-        String model = """
+        // GIVEN: A model with a function, connection and runtime
+        String pureSource = """
                 Class model::Adult { name: String[1]; age: Integer[1]; }
                 Database store::AdultDb ( Table T_ADULT ( ID INTEGER, NAME VARCHAR(100), AGE INTEGER ) )
                 Mapping model::AdultMap ( Adult: Relational { ~mainTable [AdultDb] T_ADULT name: [AdultDb] T_ADULT.NAME, age: [AdultDb] T_ADULT.AGE } )
@@ -1178,45 +946,40 @@ class DuckDBIntegrationTest extends AbstractDatabaseTest {
                 {
                     Adult.all()->filter({p | $p.age >= 18})
                 }
+
+                RelationalDatabaseConnection store::TestConnection
+                {
+                    type: DuckDB;
+                    specification: InMemory { };
+                    auth: NoAuth { };
+                }
+
+                Runtime test::TestRuntime
+                {
+                    mappings: [ model::AdultMap ];
+                    connections: [ store::AdultDb: store::TestConnection ];
+                }
                 """;
 
-        // Setup test data (unique table name to avoid conflicts with setUp)
+        // Setup test data
         connection.createStatement().execute(
                 "CREATE TABLE T_ADULT (ID INTEGER, NAME VARCHAR(100), AGE INTEGER)");
         connection.createStatement().execute(
                 "INSERT INTO T_ADULT VALUES (1, 'Alice', 25), (2, 'Bob', 15), (3, 'Charlie', 30)");
 
-        // Parse the model (includes the function definition)
-        modelBuilder = new PureModelBuilder();
-        modelBuilder.addSource(model);
-        MappingRegistry mappingRegistry = modelBuilder.getMappingRegistry();
-        pureCompiler = new org.finos.legend.pure.dsl.PureCompiler(mappingRegistry);
-
-        // WHEN: Parse and compile the function BODY directly
+        // Execute the function body via QueryService
         String functionBody = "Adult.all()->filter({p | $p.age >= 18})";
-        RelationNode plan = pureCompiler.compile(functionBody);
-        String sql = sqlGenerator.generate(plan);
-
-        System.out.println("Function body SQL (getAdults): " + sql);
-
-        // Execute against DuckDB
-        ResultSet rs = connection.createStatement().executeQuery(sql);
+        var result = queryService.execute(pureSource, functionBody, "test::TestRuntime", connection);
 
         // THEN: Should return only adults (age >= 18)
-        int count = 0;
-        while (rs.next()) {
-            count++;
-            int age = rs.getInt("AGE");
-            assertTrue(age >= 18, "Should only return adults, got age: " + age);
-        }
-        assertEquals(2, count, "Should return 2 adults (Alice and Charlie)");
+        assertEquals(2, result.rows().size(), "Should return 2 adults (Alice and Charlie)");
     }
 
     @Test
     @DisplayName("Function with Relation query - execute body against DuckDB")
     void testFunctionWithRelationQuery_DuckDB() throws Exception {
-        // GIVEN: A model with a function that returns a projected query
-        String model = """
+        // GIVEN: A model with a function, connection and runtime
+        String pureSource = """
                 Class model::Worker { dept: String[1]; salary: Integer[1]; }
                 Database store::WorkerDb ( Table T_WORKER ( ID INTEGER, DEPT VARCHAR(50), SALARY INTEGER ) )
                 Mapping model::WorkerMap ( Worker: Relational { ~mainTable [WorkerDb] T_WORKER dept: [WorkerDb] T_WORKER.DEPT, salary: [WorkerDb] T_WORKER.SALARY } )
@@ -1224,6 +987,19 @@ class DuckDBIntegrationTest extends AbstractDatabaseTest {
                 function query::getWorkerInfo(): Any[*]
                 {
                     Worker.all()->project([{w | $w.dept}, {w | $w.salary}], ['department', 'sal'])
+                }
+
+                RelationalDatabaseConnection store::TestConnection
+                {
+                    type: DuckDB;
+                    specification: InMemory { };
+                    auth: NoAuth { };
+                }
+
+                Runtime test::TestRuntime
+                {
+                    mappings: [ model::WorkerMap ];
+                    connections: [ store::WorkerDb: store::TestConnection ];
                 }
                 """;
 
@@ -1233,29 +1009,12 @@ class DuckDBIntegrationTest extends AbstractDatabaseTest {
         connection.createStatement().execute(
                 "INSERT INTO T_WORKER VALUES (1, 'Engineering', 100000), (2, 'Engineering', 120000), (3, 'Sales', 80000)");
 
-        modelBuilder = new PureModelBuilder();
-        modelBuilder.addSource(model);
-        MappingRegistry mappingRegistry = modelBuilder.getMappingRegistry();
-        pureCompiler = new org.finos.legend.pure.dsl.PureCompiler(mappingRegistry);
-
-        // WHEN: Parse and compile the function BODY (project without nested ->)
+        // Execute the function body via QueryService
         String functionBody = "Worker.all()->project([{w | $w.dept}, {w | $w.salary}], ['department', 'sal'])";
-        RelationNode plan = pureCompiler.compile(functionBody);
-        String sql = sqlGenerator.generate(plan);
-
-        System.out.println("Function body SQL (getWorkerInfo): " + sql);
-
-        // Execute against DuckDB
-        ResultSet rs = connection.createStatement().executeQuery(sql);
+        var result = queryService.execute(pureSource, functionBody, "test::TestRuntime", connection);
 
         // THEN: Should return 3 rows with projected columns
-        int rowCount = 0;
-        while (rs.next()) {
-            rowCount++;
-            assertNotNull(rs.getString("department"));
-            assertTrue(rs.getInt("sal") > 0);
-        }
-        assertEquals(3, rowCount, "Should have 3 worker rows");
+        assertEquals(3, result.rows().size(), "Should have 3 worker rows");
     }
 
     // ==================== Relation API Tests ====================
